Prevent select from shifting the content when active

--- a/demo/peacock/src/ui/select/select.css
+++ b/demo/peacock/src/ui/select/select.css
@@ -7,6 +7,7 @@
   border-radius: 12px;
   &:active {
     border: solid 3px #b6d7ff;
+    margin: -1px -3px -1px -1px;
   }
 }
 .select-box select {
